--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "clonex-tracker",
-  "main": "main.js",
+  "main": "main.ts",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "npx ts-node src/main.ts",
-    "build": "echo \"No build needed. Static files are already in place.\""
+    "build": "echo \"No build needed. Static files are already in place.\"",
+    "start": "ts-node main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "@nestjs/common": "^11.1.0",
     "@nestjs/core": "^11.1.0",
@@ -25,6 +26,7 @@
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
