--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "strict": true
   }
 }
