--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "clonex-tracker",
-  "main": "main.ts",
+  "main": "dist/src/main.js",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "npx ts-node src/main.ts",
-    "build": "echo \"No build needed. Static files are already in place.\"",
-    "dev": "npx ts-node main.ts",
-    "start": "ts-node main.ts"
+    "build": "tsc",
+    "dev": "npx ts-node src/main.ts",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
