--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "run": "npx ts-node src/main.ts",
     "build": "tsc",
     "dev": "npx ts-node src/main.ts",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "start:prod": "node dist/main.js"
   },
   "keywords": [],
   "author": "",
