--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "npx ts-node src/main.ts",
-    "build": "tsc",
+    "build": "npx tsc",
     "dev": "npx ts-node -r dotenv/config src/main.ts",
     "start": "node dist/main.js",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/main.js",
+    "postinstall": "chmod +x ./node_modules/.bin/tsc"
+
   },
   "keywords": [],
   "author": "",
