--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "npx ts-node src/main.ts",
-    "build": "npx tsc",
+    "build": "node_modules/.bin/tsc",
     "dev": "npx ts-node -r dotenv/config src/main.ts",
     "start": "node dist/main.js",
     "start:prod": "node dist/main.js",
