--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "@nestjs/common": "^11.1.0",
     "@nestjs/core": "^11.1.0",
     "@nestjs/jwt": "^11.0.0",
@@ -46,9 +48,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
-    "@types/passport-jwt": "^4.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/passport-jwt": "^4.0.1"
   },
   "build": {
     "appId": "com.Benzos.tracker",
