--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "dev": "npx ts-node -r dotenv/config src/main.ts",
     "start": "node dist/main.js",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/main.js",
+    "start:dev": "nest start --watch"
   },
   "keywords": [],
   "author": "",
